<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

 <EditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/enter_your_name"
       android:id="@+id/editText_Name"
       android:textSize="20sp"/>
 <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_surname"
        android:id="@+id/editText_Surname"
        android:layout_below="@+id/editText_Name"
        android:textSize="20sp"/>
 <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_marks"
        android:layout_below="@+id/editText_Surname"
        android:id="@+id/editText_Marks"
        android:textSize="20sp"/>
 <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter ID"
        android:inputType="number"
        android:layout_below="@+id/editText_Marks"
        android:id="@+id/editText_ID"/>

 <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/add_data"
        android:layout_below="@+id/editText_ID"
        android:id="@+id/button_AddData"/>

 <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_ViewData"
        android:layout_below="@+id/button_AddData"
        android:layout_centerHorizontal="true"
        android:text="@string/view_data"/>
 <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_UpdateData"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_ViewData"
        android:text="@string/update_data"/>
 <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_id"
        android:layout_below="@+id/button_UpdateData"
        android:id="@+id/button_DeleteData"
        android:layout_centerHorizontal="true"/>

 <EditText
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="@string/search"
     android:layout_below="@+id/button_DeleteData"
     android:id="@+id/editText_Search" />
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/search"
     android:layout_below="@id/editText_Search"
     android:id="@+id/button_Search"
     android:layout_centerHorizontal="true"/>





</RelativeLayout>